--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
 
 body {
   background-color: #282C33;
