--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -4,6 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 
 
-body {
+/* body {
   background-color: #000000;
-}
+} */
