--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inika:wght@700&display=swap');
 
 
