--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -4,4 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@700&display=swap');
 
+@layer utilities{
+  .box-shadow-custom{
+    box-shadow: 0px 0px 19px 8px rgba(29, 29, 29, 0.71);
+  }
+}
 
